# Data-Analyzer

data_analysis/: README.md  pyproject.toml
data_analysis/src/data_analysis/: crew.py  main.py
data_analysis/src/data_analysis/config/: tasks.yaml
