[project]
name = "data_analysis"
version = "0.1.0"
description = "data_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
data_analysis = "data_analysis.main:run"
run_crew = "data_analysis.main:run"
train = "data_analysis.main:train"
replay = "data_analysis.main:replay"
test = "data_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
